# Algoritmica2repo

./: CMakeLists.txt  README.md
algortimos/backtracking/: 8queens.cpp  EditDistanceBackT.cpp  Nqueens.cpp  README.md
algortimos/estructurasDeDatos/BIT/: BIT.cpp  README.md
algortimos/estructurasDeDatos/SegmentTree/: README.md  SegmentTree.cpp
algortimos/estructurasDeDatos/SegmentTree/ejercicios/: 6139.cpp
algortimos/estructurasDeDatos/Trie/: README.md  TrieArray.cpp
algortimos/estructurasDeDatos/Trie/ejercicios/: CostOfData.cpp  SearchEngine.cpp
algortimos/estructurasDeDatos/UnionFind/: README.md  UnionFind.cpp
algortimos/estructurasDeDatos/UnionFind/ejercicios/: CityAndFlood.cpp  CityAndSoldiers.cpp
algortimos/geometriaAnalitica/: GeometriaComputacional.cpp  GeometriaHalim.cpp  GeomteriaComputacional.cpp  README.md
algortimos/programacionDinamica/: README.md
algortimos/programacionDinamica/DigitDP/: DigitDPFix.cpp  DigitDPoriginal.cpp  README.md
algortimos/programacionDinamica/DigitDP/ejercicios/: DigitDPoriginalExercise1.cpp  DigitDPoriginalExercise2.cpp  DigitDPoriginalExercise3.cpp
algortimos/programacionDinamica/EditDistance/: EditDistance.cpp  README.md
algortimos/programacionDinamica/RodCutting/: README.md  RodCuttingDP.cpp
algortimos/teoriaDeGrafos/Dinic/: Dinic.cpp  README.md
algortimos/teoriaDeGrafos/EdmondsKarp/: README.md
algortimos/teoriaDeGrafos/Kruskal/: Kruskal.cpp  README.md
algortimos/teoriaDeGrafos/Prim/: Prim.cpp  README.md
algortimos/teoriaDeNumeros/: FactoresPrimos.cpp  NumeroDeDivisores.cpp  README.md
algortimos/teoriaDeNumeros/BusquedaBinaria/: BusquedaBinaria.cpp  BusquedaBinaria_PrimerMayor.cpp  BusquedaBinaria_UltimoNoMayor.cpp  README.md
contenido/Estructuras de Datos/SegmentTree/: SegmentTree.cpp
contenido/Estructuras de Datos/Trie/: TrieArray.cpp  TrieMap.cpp
